fixed whitespace, adding day of week

--- a/client/main.css
+++ b/client/main.css
@@ -2,16 +2,13 @@ body {
   font-family: sans-serif;
   background-image: linear-gradient(to bottom, #315481, #918e82 100%);
   background-attachment: fixed;
- 
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
- 
   padding: 0;
   margin: 0;
- 
   font-size: 30px;
 }
 
@@ -30,13 +27,39 @@ body {
   padding-top: 0.5em;
 
 }
-#date, #time {
+#date {
   background: #d2edf4;
   background-image: linear-gradient(to bottom, #d0edf5);
-  display: inline-block;
+  display: inline-flex;
   transition-duration: 0.4s;
-  border: 4px solid lightseagreen;
-  font-size: 25px;
+  font-size: 27px;
+  border: 2px solid blue;
+  padding: 0;
+  margin: 0;
+}
+
+#time {
+  background: #d2edf4;
+  background-image: linear-gradient(to bottom, #d0edf5);
+  display: inline-flex;
+  transition-duration: 0.4s;
+  border: 2px solid blue;
+  font-size: 27px;
+  float: right;
+}
+
+#day {
+  background: #d2edf4;
+  background-image: linear-gradient(to bottom, #d0edf5);
+  display: inline-flex;
+  transition-duration: 0.4s;
+  border: 2px solid blue;
+  font-size: 27px;
+  text-align: center;
+}
+#day:hover {
+  background-color: blue;
+  color: white;
 }
 
 #date:hover {
@@ -44,28 +67,28 @@ body {
   color: white;
 }
 
-#time {
-  float: right;
-}
 #time:hover {
   background-color: blue;
   color: white;
 }
+
 .toggle-private {
   font-size: 10px;
   border: 2px solid #4CAF50;
   border-radius: 10px;
   transition-duration: 0.4s;
 }
+
 .toggle-private:hover {
   background-color: #4CAF50;
   color: white;
 }
+
 .container {
   max-width: 927px;
   margin: 0 auto;
   min-height: 100%;
-  background: white;
+  background: #d2edf4;
 }
 
 header {
